patch dupe and add chimneys
patch dupe and add chimneys

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,17 @@ Blood-N-Wine-2-Export/Blood-N-Wine-2-Curseforge-Export/*
 #Ignore Blood-N-Wine-2-Modrinth-Export
 Blood-N-Wine-2-Export/Blood-N-Wine-2-Modrinth-Export/*
 
+#Ignore CopyAndModifyFolder .ans files
+Blood-N-Wine-2-Curseforge-Export-Part-I.ans
+Blood-N-Wine-2-Curseforge-Export-Part-II.ans
+Blood-N-Wine-2-Modrinth-Export.ans
+Blood-N-Wine-2-Server-Export-Part-I.ans
+Blood-N-Wine-2-Server-Export-Part-II.ans
+Blood-N-Wine-2-Server-Local-Part-I.ans
+Blood-N-Wine-2-Server-Local-Part-II.ans
+Blood-N-Wine-2-Technic-Export-Part-I.ans
+Blood-N-Wine-2-Technic-Export-Part-II.ans
+
 #Ignore folders
 XaeroWaypoints
 XaeroWaypoints_BACKUP032021
@@ -34,7 +45,6 @@ fancymenu_setups
 logs/
 crash-reports
 dumps
-*.ans
 
 #litematica cache
 litematica
@@ -118,93 +128,53 @@ config/bloodnwine2resources/extraction_cache/extraction_cache_Blood-N-Wine-2-Mus
 #ignore options.txt
 options.txt
 
-#ignore constantly changing files every time the game is booted
-config/FatherToast/specialmobs/drowned/abyssal_drowned.toml
-config/FatherToast/specialmobs/drowned/brute_drowned.toml
-config/FatherToast/specialmobs/drowned/fishing_drowned.toml
-config/FatherToast/specialmobs/drowned/frozen_drowned.toml
-config/FatherToast/specialmobs/drowned/giant_drowned.toml
-config/FatherToast/specialmobs/drowned/hungry_drowned.toml
-config/FatherToast/specialmobs/drowned/knight_drowned.toml
-config/FatherToast/specialmobs/drowned/plague_drowned.toml
-config/FatherToast/specialmobs/skeletons/brute_skeletons.toml
-config/FatherToast/specialmobs/skeletons/fire_skeletons.toml
-config/FatherToast/specialmobs/skeletons/gatling_skeletons.toml
-config/FatherToast/specialmobs/skeletons/giant_skeletons.toml
-config/FatherToast/specialmobs/skeletons/knight_skeletons.toml
-config/FatherToast/specialmobs/skeletons/ninja_skeletons.toml
-config/FatherToast/specialmobs/skeletons/poison_skeletons.toml
-config/FatherToast/specialmobs/skeletons/sniper_skeletons.toml
-config/FatherToast/specialmobs/skeletons/spitfire_skeletons.toml
-config/FatherToast/specialmobs/skeletons/stray_skeletons.toml
-config/FatherToast/specialmobs/skeletons/weathered_skeletons.toml
-config/FatherToast/specialmobs/wither_skeletons/brute_wither_skeletons.toml
-config/FatherToast/specialmobs/wither_skeletons/gatling_wither_skeletons.toml
-config/FatherToast/specialmobs/wither_skeletons/giant_wither_skeletons.toml
-config/FatherToast/specialmobs/wither_skeletons/knight_wither_skeletons.toml
-config/FatherToast/specialmobs/wither_skeletons/ninja_wither_skeletons.toml
-config/FatherToast/specialmobs/wither_skeletons/sniper_wither_skeletons.toml
-config/FatherToast/specialmobs/wither_skeletons/spitfire_wither_skeletons.toml
-config/FatherToast/specialmobs/zombies/brute_zombies.toml
-config/FatherToast/specialmobs/zombies/fire_zombies.toml
-config/FatherToast/specialmobs/zombies/fishing_zombies.toml
-config/FatherToast/specialmobs/zombies/frozen_zombies.toml
-config/FatherToast/specialmobs/zombies/giant_zombies.toml
-config/FatherToast/specialmobs/zombies/hungry_zombies.toml
-config/FatherToast/specialmobs/zombies/husk_zombies.toml
-config/FatherToast/specialmobs/zombies/mad_scientist_zombies.toml
-config/FatherToast/specialmobs/zombies/plague_zombies.toml
-config/FatherToast/specialmobs/zombified_piglins/brute_zombified_piglins.toml
-config/FatherToast/specialmobs/zombified_piglins/fishing_zombified_piglins.toml
-config/FatherToast/specialmobs/zombified_piglins/giant_zombified_piglins.toml
-config/FatherToast/specialmobs/zombified_piglins/hungry_zombified_piglins.toml
-config/FatherToast/specialmobs/zombified_piglins/knight_zombified_piglins.toml
-config/FatherToast/specialmobs/zombified_piglins/plague_zombified_piglins.toml
-config/FatherToast/specialmobs/zombified_piglins/vampire_zombified_piglins.toml
-
-#ignore minecraftinstance
-minecraftinstance.json
-
 #ignore constantly updating files
-config/FatherToast/specialmobs/drowned/abyssal_drowned.toml
-config/FatherToast/specialmobs/drowned/brute_drowned.toml
-config/FatherToast/specialmobs/drowned/fishing_drowned.toml
-config/FatherToast/specialmobs/drowned/frozen_drowned.toml
-config/FatherToast/specialmobs/drowned/giant_drowned.toml
-config/FatherToast/specialmobs/drowned/hungry_drowned.toml
-config/FatherToast/specialmobs/drowned/knight_drowned.toml
-config/FatherToast/specialmobs/drowned/plague_drowned.toml
-config/FatherToast/specialmobs/skeletons/brute_skeletons.toml
-config/FatherToast/specialmobs/skeletons/fire_skeletons.toml
-config/FatherToast/specialmobs/skeletons/gatling_skeletons.toml
-config/FatherToast/specialmobs/skeletons/giant_skeletons.toml
-config/FatherToast/specialmobs/skeletons/knight_skeletons.toml
-config/FatherToast/specialmobs/skeletons/ninja_skeletons.toml
-config/FatherToast/specialmobs/skeletons/poison_skeletons.toml
-config/FatherToast/specialmobs/skeletons/sniper_skeletons.toml
-config/FatherToast/specialmobs/skeletons/spitfire_skeletons.toml
-config/FatherToast/specialmobs/skeletons/stray_skeletons.toml
-config/FatherToast/specialmobs/skeletons/weathered_skeletons.toml
-config/FatherToast/specialmobs/wither_skeletons/brute_wither_skeletons.toml
-config/FatherToast/specialmobs/wither_skeletons/gatling_wither_skeletons.toml
-config/FatherToast/specialmobs/wither_skeletons/giant_wither_skeletons.toml
-config/FatherToast/specialmobs/wither_skeletons/knight_wither_skeletons.toml
-config/FatherToast/specialmobs/wither_skeletons/ninja_wither_skeletons.toml
-config/FatherToast/specialmobs/wither_skeletons/sniper_wither_skeletons.toml
-config/FatherToast/specialmobs/wither_skeletons/spitfire_wither_skeletons.toml
-config/FatherToast/specialmobs/zombies/brute_zombies.toml
-config/FatherToast/specialmobs/zombies/fire_zombies.toml
-config/FatherToast/specialmobs/zombies/fishing_zombies.toml
-config/FatherToast/specialmobs/zombies/frozen_zombies.toml
-config/FatherToast/specialmobs/zombies/giant_zombies.toml
-config/FatherToast/specialmobs/zombies/hungry_zombies.toml
-config/FatherToast/specialmobs/zombies/husk_zombies.toml
-config/FatherToast/specialmobs/zombies/mad_scientist_zombies.toml
-config/FatherToast/specialmobs/zombies/plague_zombies.toml
-config/FatherToast/specialmobs/zombified_piglins/brute_zombified_piglins.toml
-config/FatherToast/specialmobs/zombified_piglins/fishing_zombified_piglins.toml
-config/FatherToast/specialmobs/zombified_piglins/giant_zombified_piglins.toml
-config/FatherToast/specialmobs/zombified_piglins/hungry_zombified_piglins.toml
-config/FatherToast/specialmobs/zombified_piglins/knight_zombified_piglins.toml
-config/FatherToast/specialmobs/zombified_piglins/plague_zombified_piglins.toml
-config/FatherToast/specialmobs/zombified_piglins/vampire_zombified_piglins.toml
+abyssal_drowned.toml
+brute_drowned.toml
+fishing_drowned.toml
+frozen_drowned.toml
+giant_drowned.toml
+hungry_drowned.toml
+knight_drowned.toml
+plague_drowned.toml
+brute_skeletons.toml
+fire_skeletons.toml
+gatling_skeletons.toml
+giant_skeletons.toml
+knight_skeletons.toml
+ninja_skeletons.toml
+poison_skeletons.toml
+sniper_skeletons.toml
+spitfire_skeletons.toml
+stray_skeletons.toml
+weathered_skeletons.toml
+brute_wither_skeletons.toml
+gatling_wither_skeletons.toml
+giant_wither_skeletons.toml
+knight_wither_skeletons.toml
+ninja_wither_skeletons.toml
+sniper_wither_skeletons.toml
+spitfire_wither_skeletons.toml
+brute_zombies.toml
+fire_zombies.toml
+fishing_zombies.toml
+frozen_zombies.toml
+giant_zombies.toml
+hungry_zombies.toml
+husk_zombies.toml
+mad_scientist_zombies.toml
+plague_zombies.toml
+brute_zombified_piglins.toml
+fishing_zombified_piglins.toml
+giant_zombified_piglins.toml
+hungry_zombified_piglins.toml
+knight_zombified_piglins.toml
+plague_zombified_piglins.toml
+vampire_zombified_piglins.toml
+
+#ignore .curseclient
+.curseclient
+
+#ignore worldedit
+WorldEdit-CUI-FE3-1.16.5-3.0.9.jar
+worldedit-mod-7.2.5-dist.jar
