--- a/config/jei/bookmarks.ini
+++ b/config/jei/bookmarks.ini
@@ -1,3 +1,4 @@
+T:{ForgeCaps:{"dungeons_libraries:built_in_enchantments":{BuiltInEnchantments:[]}},id:"moreminecarts:wooden_rail",Count:1b}
 T:{ForgeCaps:{"dungeons_libraries:built_in_enchantments":{BuiltInEnchantments:[]}},id:"minecraft:dark_oak_planks",Count:1b}
 T:{ForgeCaps:{"dungeons_libraries:built_in_enchantments":{BuiltInEnchantments:[]}},id:"enhanced_mushrooms:brown_mushroom_planks",Count:1b}
 T:{ForgeCaps:{"dungeons_libraries:built_in_enchantments":{BuiltInEnchantments:[]}},id:"gasesframework:woodgastank",Count:1b}
