--- a/.gitignore
+++ b/.gitignore
@@ -175,6 +175,9 @@ vampire_zombified_piglins.toml
 #ignore .curseclient
 .curseclient
 
+#ignore impossible_data
+what_is_this_folder.txt
+
 #ignore worldedit
 WorldEdit-CUI-FE3-1.16.5-3.0.9.jar
 worldedit-mod-7.2.5-dist.jar
