update config and add starlight
update config and add starlight

--- a/config/modernfix-mixins.properties
+++ b/config/modernfix-mixins.properties
@@ -95,6 +95,8 @@
 #  mixin.safety=true # (default)
 #
 # User overrides go here.
+mixin.feature.direct_stack_trace=true
+mixin.perf.clear_mixin_classinfo=true
 mixin.perf.dynamic_block_codecs=true
 mixin.perf.dynamic_resources=true
 mixin.perf.faster_item_rendering=true
