--- a/config/quark-common.toml
+++ b/config/quark-common.toml
@@ -230,7 +230,7 @@
 [management]
 	"Chests In Boats" = true
 	"Inventory Sorting" = true
-	"Shulker Box Right Click" = true
+	"Shulker Box Right Click" = false
 	"Hotbar Changer" = true
 	"Item Sharing" = true
 	"Right Click Armor" = true
