--- a/config/dsurround/environs-client.toml
+++ b/config/dsurround/environs-client.toml
@@ -49,18 +49,18 @@
 	#Enable/disable fog processing
 	"Enable Fog Processing" = false
 	#Enable biome specific fog density and color
-	"Biome Fog" = true
+	"Biome Fog" = false
 	#Higher the player elevation the more haze that is experienced
-	"Elevation Haze" = true
+	"Elevation Haze" = false
 	#Show morning fog that eventually burns off
-	"Morning Fog" = true
+	"Morning Fog" = false
 	#Increase fog at bedrock layers
-	"Bedrock Fog" = true
+	"Bedrock Fog" = false
 	#Increase fog based on the strength of rain
-	"Weather Fog" = true
+	"Weather Fog" = false
 	#Percentage chance morning fog will occur
 	#Range: 1 ~ 100
-	"Morning Fog Chance Percentage" = 80
+	"Morning Fog Chance Percentage" = 1
 
 #Options for defining sound behavior
 ["Sound Options"]
