--- a/config/embeddium_extras.toml
+++ b/config/embeddium_extras.toml
@@ -6,7 +6,7 @@
 		"Removes the banding at the horizon of Vanilla Minecraft" = true
 		"Enable GPU Memory Leak Fix" = true
 		#FastChest helps by removing their dynamic models (aka BlockEntityRenderer) and making them render as static chunk geometry, like most normal blocks. This means they will lose their lid opening animation!
-		"Enable Fast Chest" = true
+		"Enable Fast Chest" = false
 		"Chunk Fade In Speed Modifier" = 30
 		#Tweak JEI rendering so that the item list does not display unless search is active. This de-clutters the screen significantly unless you're actively using JEI.
 		"Hide JEI Items" = false
