music disc spawning commands

--- a/config/worldedit/worldedit.properties
+++ b/config/worldedit/worldedit.properties
@@ -1,5 +1,5 @@
 #Don't put comments; they get removed
-#Sun Mar 10 00:42:15 PST 2024
+#Sun Mar 10 17:51:07 PDT 2024
 default-locale=default
 super-pickaxe-many-drop-items=true
 max-calculation-timeout=300
