--- a/config/DistantHorizons.toml
+++ b/config/DistantHorizons.toml
@@ -109,7 +109,7 @@ _version = 2
 			# is already set to 1 for the given option, or more finely 
 			# tune CPU performance.
 			# 
-			runTimeRatioForWorldGenerationThreads = 0.75
+			runTimeRatioForWorldGenerationThreads = "0.75"
 			# If this value is less than 1.0, it will be treated as a percentage 
 			# of time each thread can run before going idle. 
 			# 
@@ -117,7 +117,7 @@ _version = 2
 			# is already set to 1 for the given option, or more finely 
 			# tune CPU performance.
 			# 
-			runTimeRatioForLodBuilderThreads = 0.5
+			runTimeRatioForLodBuilderThreads = "0.5"
 			# If this value is less than 1.0, it will be treated as a percentage 
 			# of time each thread can run before going idle. 
 			# 
@@ -125,7 +125,7 @@ _version = 2
 			# is already set to 1 for the given option, or more finely 
 			# tune CPU performance.
 			# 
-			runTimeRatioForFileHandlerThreads = 0.5
+			runTimeRatioForFileHandlerThreads = "0.5"
 			# How many threads should be used when reading in LOD data from disk? 
 			# 
 			# Increasing this number will cause LODs to load in faster, 
@@ -219,11 +219,11 @@ _version = 2
 			enableDebugKeybindings = false
 			# Should specialized colors/rendering modes be used? 
 			# 
-			# OFF: Fake chunks will be drawn with their normal colors. 
-			# SHOW_DETAIL: Fake chunks color will be based on their detail level. 
-			# SHOW_GENMODE: Fake chunks color will be based on their distant generation mode. 
-			# SHOW_OVERLAPPING_QUADS: Fake chunks will be drawn with total white, but overlapping quads will be drawn with red. 
-			#     but overlapping quads will be drawn with red, drawn as a wireframe.
+			# OFF: LODs will be drawn with their normal colors. 
+			# SHOW_DETAIL: LODs' color will be based on their detail level. 
+			# SHOW_BLOCK_MATERIAL: LODs' color will be based on their material. 
+			# SHOW_OVERLAPPING_QUADS: LODs will be drawn with total white, but overlapping quads will be drawn with red. 
+			# 
 			# 
 			debugRendering = "OFF"
 
@@ -319,7 +319,7 @@ _version = 2
 				longTest = "42069"
 				listTest = ["option 1", "option 2", "option 3"]
 				boolTest = false
-				doubleTest = 420.69
+				doubleTest = "420.69"
 				floatTest = "0.42069"
 				linkableTest = 420
 				intTest = 69420
@@ -334,22 +334,22 @@ _version = 2
 				sampleCount = 6
 				# Determines how dark the Screen Space Ambient Occlusion effect will be.
 				# 
-				strength = 0.2
+				strength = "0.2"
 				# The radius, measured in pixels, that blurring is calculated for the SSAO. 
 				# Higher numbers will reduce banding at the cost of GPU performance.
 				# 
 				blurRadius = 2
 				# Increasing the value can reduce banding at the cost of reducing the strength of the effect.
 				# 
-				bias = 0.02
+				bias = "0.02"
 				# Determines how dark the occlusion shadows can be. 
 				# 0 = totally black at the corners 
 				# 1 = no shadow
 				# 
-				minLight = 0.25
+				minLight = "0.25"
 				# Determines the radius Screen Space Ambient Occlusion is applied, measured in blocks.
 				# 
-				radius = 4.0
+				radius = "4.0"
 				# Enable Screen Space Ambient Occlusion
 				# 
 				enabled = true
@@ -358,17 +358,17 @@ _version = 2
 				# What the value should vanilla Minecraft's texture LodBias be? 
 				# If set to 0 the mod wont overwrite vanilla's default (which so happens to also be 0)
 				# 
-				lodBias = 0.0
-				# Determines how far Distant Horizon's near clip plane will render. 
+				lodBias = "0.0"
+				# Determines how far from the camera Distant Horizons will start rendering. 
+				# Measured as a percentage of the vanilla render distance.
 				# 
 				# Higher values will prevent LODs from rendering behind vanilla blocks at a higher distance,
 				# but may cause holes to appear in the LODs. 
-				# Holes are most likely at the left and right edges of the screen 
-				# when flying through unloaded terrain. 
+				# Holes are most likely to appear when flying through unloaded terrain. 
 				# 
-				# Increasing the vanilla render distance increases the effectiveness of these options.
+				# Increasing the vanilla render distance increases the effectiveness of this setting.
 				# 
-				overdrawPrevention = "MEDIUM"
+				overdrawPrevention = "0.4"
 				# Buggy experimental option that will attempt to match up 
 				# Distant Horizons' and Minecraft's near/far clip planes, 
 				# reducing overdraw. 
@@ -385,7 +385,7 @@ _version = 2
 				# 1 = normal 
 				# 2 = near white
 				# 
-				brightnessMultiplier = 1.0
+				brightnessMultiplier = "1.0"
 				# If enabled caves will be culled 
 				# 
 				# NOTE: This feature is under development and 
@@ -415,7 +415,7 @@ _version = 2
 				# 1 = normal 
 				# 2 = very saturated
 				# 
-				saturationMultiplier = 1.0
+				saturationMultiplier = "1.0"
 				# This is the earth size ratio when applying the curvature shader effect. 
 				# Note: Enabling this feature may cause rendering bugs. 
 				# 
@@ -429,6 +429,26 @@ _version = 2
 				# will be set to 0 (disabled).
 				# 
 				earthCurveRatio = 0
+				# If false LODs outside the player's camera 
+				# aren't drawn, increasing GPU performance. 
+				# 
+				# If true all LODs are drawn, even those behind 
+				# the player's camera, decreasing GPU performance. 
+				# 
+				# Disable this if you see LODs disappearing at the corners of your vision.
+				# 
+				disableFrustumCulling = true
+				# Identical to the other frustum culling option
+				# only used when a shader mod is present using the DH API
+				# and the shadow pass is being rendered.
+				# 
+				# Disable this if shadows render incorrectly.
+				# 
+				disableShadowPassFrustumCulling = false
+				# Skip rendering LOD during shadow pass when using Iris or Oculus
+				# This is an old workaround to improve compatibility with Iris or Oculus
+				# 
+				skipShadowPassShaderPacks = true
 
 			[client.advanced.graphics.quality]
 				# What is the maximum detail LODs should be drawn at? 
@@ -514,20 +534,20 @@ _version = 2
 					# 0.0: No fog. 
 					# 1.0: Fully opaque fog.
 					# 
-					farFogMax = 1.0
+					farFogMax = "1.0"
 					# At what distance should the far fog start? 
 					# 
 					# 0.0: Fog starts at the player's position. 
 					# 1.0: Fog starts at the closest edge of the vanilla render distance. 
 					# 1.414: Fog starts at the corner of the vanilla render distance.
 					# 
-					farFogStart = 0.0
+					farFogStart = "0.0"
 					# What is the minimum fog thickness? 
 					# 
 					# 0.0: No fog. 
 					# 1.0: Fully opaque fog.
 					# 
-					farFogMin = 0.0
+					farFogMin = "0.0"
 					# How should the fog thickness should be calculated? 
 					# 
 					# LINEAR: Linear based on distance (will ignore 'density')
@@ -537,14 +557,14 @@ _version = 2
 					farFogFalloff = "EXPONENTIAL_SQUARED"
 					# Used in conjunction with the Fog Falloff.
 					# 
-					farFogDensity = 2.5
+					farFogDensity = "2.5"
 					# Where should the far fog end? 
 					# 
 					# 0.0: Fog ends at player's position.
 					# 1.0: Fog ends at the closest edge of the vanilla render distance. 
 					# 1.414: Fog ends at the corner of the vanilla render distance.
 					# 
-					farFogEnd = 1.0
+					farFogEnd = "1.0"
 
 					[client.advanced.graphics.fog.advancedFog.heightFog]
 						# What is the minimum fog thickness? 
@@ -552,7 +572,7 @@ _version = 2
 						# 0.0: No fog. 
 						# 1.0: Fully opaque fog.
 						# 
-						heightFogMin = 0.0
+						heightFogMin = "0.0"
 						# Where should the height fog start? 
 						# 
 						# ABOVE_CAMERA: Height fog starts at the camera and goes towards the sky 
@@ -565,13 +585,13 @@ _version = 2
 						heightFogMode = "ABOVE_AND_BELOW_CAMERA"
 						# If the height fog is calculated around a set height, what is that height position?
 						# 
-						heightFogBaseHeight = 70.0
+						heightFogBaseHeight = "70.0"
 						# What is the maximum fog thickness? 
 						# 
 						# 0.0: No fog. 
 						# 1.0: Fully opaque fog.
 						# 
-						heightFogMax = 1.0
+						heightFogMax = "1.0"
 						# How should the height fog thickness should be calculated? 
 						# 
 						# LINEAR: Linear based on height (will ignore 'density')
@@ -581,7 +601,7 @@ _version = 2
 						heightFogFalloff = "EXPONENTIAL_SQUARED"
 						# What is the height fog's density?
 						# 
-						heightFogDensity = 2.5
+						heightFogDensity = "2.5"
 						# How should height effect the fog thickness? 
 						# Note: height fog is combined with the other fog settings. 
 						# 
@@ -604,13 +624,13 @@ _version = 2
 						# 0.0: Fog start with no offset.
 						# 1.0: Fog start with offset of the entire world's height. (Includes depth)
 						# 
-						heightFogStart = 0.0
+						heightFogStart = "0.0"
 						# Should the end of the height fog be offset? 
 						# 
 						# 0.0: Fog end with no offset.
 						# 1.0: Fog end with offset of the entire world's height. (Include depth)
 						# 
-						heightFogEnd = 1.0
+						heightFogEnd = "1.0"
 
 			[client.advanced.graphics.noiseTextureSettings]
 				# Defines how far should the noise texture render before it fades away. (in blocks) 
@@ -628,7 +648,7 @@ _version = 2
 				noiseEnabled = true
 				# How intense should the noise should be?
 				# 
-				noiseIntensity = 5.0
+				noiseIntensity = "5.0"
 
 		[client.advanced.worldGenerator]
 			# How detailed should LODs be generated outside the vanilla render distance? 
@@ -683,7 +703,7 @@ _version = 2
 			# Higher values mean the matching is more strict.
 			# 
 			# 
-			multiverseSimilarityRequiredPercent = 0.0
+			multiverseSimilarityRequiredPercent = "0.0"
 			# How should multiplayer save folders should be named? 
 			# 
 			# NAME_ONLY: Example: "Minecraft Server" 
