--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,48 @@ config/spark/activity.json
 
 #ignore modrinth stuff
 modpack.jar
+
+#ignore mods inside bnw2resources installer
+mods/woodarmor-1.16.5.jar
+mods/upsizer-mc1.16.4-6.1.1.jar
+mods/ThrowableExplosives-1.16.5-1.2.0.jar
+mods/TerraForged-1.16.5-0.2.16.jar
+mods/smoothchunk1.16.5-2.0.jar
+mods/simpleshops-1.1.3.jar
+mods/propertymodifier-1.16.5-0.6.4.jar
+mods/out_of_sight-1.16.4-1.0.1.jar
+mods/NatureExpansion1.5.jar
+mods/LongerDays-2.0.0-mc1.16.4.jar
+mods/InsaneLib-1.4.2-mc1.16.5.jar
+mods/IguanaTweaksReborn-2.8.5-mc1.16.5.jar
+mods/ftb-teams-forge-1605.2.3-build.40.jar
+mods/ftb-quests-forge-1605.3.7-build.165.jar
+mods/ftb-library-forge-1605.3.4-build.90.jar
+mods/ForgeEndertech-1.16.5-7.3.0.0-build.0330.jar
+mods/farsight-1.7.jar
+mods/Exlosive Arrows 1_16_x.jar
+mods/dragonfight-1.8-patched.jar
+mods/DontClearChatHistory-1.jar
+mods/DeadlyWorld-1.16.5-1.0.0.jar
+mods/curtain-mc1.16.5-1.2.2.jar
+mods/CraftableDebugStick.jar
+mods/connectivity-2.4-1.16.5.jar
+mods/chunksending-1.16.5-2.5.jar
+mods/CavesCliffsBackportAdditions-3.4.1jar.jar
+mods/cavesandcliffs-1.16.5-7.2.0.jar
+mods/camoucreeper-2.0.0.jar
+mods/brutalbosses-4.7.jar
+mods/BiomesOPlenty-1.16.5-13.1.0.488-universal.jar
+mods/biggerchathistory_1.0.0_MC_1.16.2-1.16.5.jar
+mods/BetterSprinting-1.16.3-v3.2.0.jar
+mods/BetterCompatibilityChecker-1.0.7-build.22+mc1.16.5.jar
+mods/bettercombat-1.4.5.3+1.16.jar
+mods/Apocalypse-Rebooted-1.16.5-1.0.0-r.jar
+mods/altereddamage_1.16.5-1.5.jar
+mods/allay-forge-1.16.5-4.2.0.jar
+mods/AdPother-1.16.5-4.2.1.1-build.0351.jar
+mods/glennsGasesPort1.16-1.0.8.jar
+
+#ignore files from unpacked zips
+config/fancymenu/slideshows/*
+config/MusicTriggers/songs/bloodnwine2/*
