remove chimneys and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -234,6 +234,7 @@ mods/altereddamage_1.16.5-1.5.jar
 mods/allay-forge-1.16.5-4.2.0.jar
 mods/AdPother-1.16.5-4.2.1.1-build.0351.jar
 mods/glennsGasesPort1.16-1.0.8.jar
+mods/AdChimneys-1.16.5-6.1.0.0-build.0330.jar
 
 #ignore files from unpacked zips
 config/fancymenu/slideshows/*
