update md5 .txts and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,7 @@ mods_-_required_by_closed_perms_list.7z
 #ignore Blood-N-Wine-2-Music Archive
 Blood-N-Wine-2-Music.zip
 Blood-N-Wine-2-Music-II.zip
+Blood-N-Wine-2-Music-III.zip
 
 #ignore Blood-N-Wine-2-Menu Archive
 Blood-N-Wine-2-Menu.zip
